# gltf-model

./: .gitignore  README.md
bench/: pig.bbmodel
viewer/: Cargo.toml
viewer/assets/: block_texture_shader.wgsl  texture_binding_array.wgsl
viewer/assets/models/: bed.gltf  dropping.gltf  grass_block.gltf  mutant_zombie.gltf  oak.gltf  pig.gltf  skeleton.gltf  squid.gltf  torch.gltf  torch_side.gltf  villager.gltf  witch_hat.gltf  zombie.gltf
viewer/assets/models/with_textures/: witch_hat.gltf
viewer/assets/shaders/: block_texture_binding_array.wgsl
viewer/examples/: update_mesh_example.rs
viewer/src/: animation.rs  atlas_enum.rs  bindless_material.rs  block.rs  built_block_mesh.rs  chunk.rs  components.rs  crosshair.rs  entity.rs  gfsc.rs  gui_atlas.rs  lib.rs  light.rs  main.rs  mob.rs  model.rs  position_display.rs  raycast.rs  region.rs  simple_control.rs  wireframe.rs
viewer/src/components/: texture_override.rs
viewer/src/entity/: animation.rs  dropping_item.rs  humanoid.rs
viewer/src/mob/: skeleton.rs  villager.rs  zombie.rs
viewer/src/model/: animation.rs  assembly.rs  humanoid.rs
